# PlyushkinCluster

./: .gitignore  CMakeLists.txt  CS  README.md  connect  cs_zoo.cfg  fuse_mount  mds_zoo.cfg  settings.cfg
CMake/: FindFUSE.cmake
apache-zookeeper-3.5.5-bin/conf/: zoo.cfg  zoo.cfg.bak  zoo.cfg.dynamic.100000000
files/: защита.pptx
include/: helloFS.h
project/include/: CS.h  CS_data.h  CS_utils.h  MDS.h  MDS_data.h  MDS_utils.h  Makefile  helloFS.h  mounter.h  utils.hpp
project/include/CS/: CS_data.h  ChunkServer.h
project/include/Client/: mounter.h
project/include/EntitiesInfo/: CS_data.h  MDS_data.h
project/include/MDS/: CS_Watcher.h  MDS.h  MDS_data.h
project/include/libfuse/: Fuse.h
project/src/: .daemon.cpp.swp  daemon.cpp  hello.cpp  helloFS.cpp  mounter.cpp  mounter_main.cpp  rpc_daemon.cpp  utils.cpp
project/src/CS/: CS_data.cpp  CS_main.cpp  ChunkServer.cpp
project/src/Client/: Fuse.cpp  connector.cpp  mounter.cpp  mounter_main.cpp
project/src/EntitiesInfo/: CS_data.cpp  MDS_data.cpp
project/src/MDS/: CS_Watcher.cpp  MDS.cpp  MDS_data.cpp  MDS_main.cpp
